--- a/programming/arch-setup.org
+++ b/programming/arch-setup.org
@@ -287,6 +287,7 @@ Then run =xdg-user-dirs-update=. (PS do not /remove/ =xdg_desktop_dir= <- read t
 * Programming
 Stuff that is specific to programming / development
 ** General
+Might consider ripgrep tho
 #+BEGIN_SRC bash
 yay the_silver_searcher # this is ag
 #+END_SRC
