--- a/organizer.org
+++ b/organizer.org
@@ -1,3 +1,6 @@
+* Internship Search
+- angel.co
+- https://angel.co/knack-2/jobs
 * Inbox
 ** ⚑ Todo Seminar Nyhius 
 DEADLINE: <2018-06-04 Mon> SCHEDULED: <2018-06-02 Sat>
