Add instructions for Heroku usage

--- a/programming/arch-setup.org
+++ b/programming/arch-setup.org
@@ -256,6 +256,9 @@ sudo openconnect https://vpn-server.uni-hannover.de/
 #+END_SRC
 And then enter credentials when prompted.
 
+** Heroku
+Install the =heroku-cli=. Use =heroku git:remote -a REMOTE-REPO-NAME= to add heroku remote to an existing project.
+
 
 * Homefolder structure
 Create the following folder structure in the home directory:
