Add list of installed packages

--- a/programming/arch-setup.org
+++ b/programming/arch-setup.org
@@ -620,3 +620,229 @@ If deletions should be synced as well specify =d= flag as well.
 - =ffmpeg $(youtube-dl -g -f 22 'https://www.youtube.com/watch?v=kn_eCjXhWdo' | sed "s/.*/-ss 197 -i &/") -t 4 -c copy monte.mp4=
 - where =22= is the format you want, =197= is the start second and =4= is the duration in second from the starting point onwards
 
+
+* Current List of Installed Packages
+alsa-utils
+android-tools
+audacity
+autoconf
+automake
+awesome
+awesome-freedesktop-git
+awesome-revelation-git
+bash
+biber
+binutils
+bison
+blockify
+blueman
+bluez
+bluez-utils
+brave-bin
+bspwm
+bzip2
+chromium
+clang
+code
+compton-tryone-git
+coreutils
+cpupower
+cquery
+cryptsetup
+dbeaver
+ddrescue
+device-mapper
+dhcpcd
+dialog
+diffutils
+e2fsprogs
+emacs-git
+exfat-utils
+fakeroot
+fd
+feh
+file
+filesystem
+findutils
+flatpak
+flex
+fontawesome.sty
+fzf
+gawk
+gcc
+gcc-libs
+gdb
+gettext
+git
+glances
+glibc
+gnuplot
+go-tools
+google-chrome
+grep
+groff
+grub
+gvfs
+gvfs-mtp
+gvfs-smb
+gzip
+heroku-cli
+hexchat
+hugo
+hunspell
+hunspell-en_US
+inetutils
+iproute2
+iputils
+jfsutils
+k2pdfopt
+keepassxc
+lain-git
+less
+libtool
+licenses
+linux
+linux-headers
+logrotate
+lvm2
+m4
+make
+man-db
+man-pages
+mariadb
+mdadm
+mesa
+mpv
+nano
+ncdu
+neovim
+netctl
+network-manager-applet
+networkmanager
+nikola
+noto-fonts
+ntfs-3g
+nvm
+oh-my-zsh-git
+openconnect
+openssh
+opera
+pacman
+patch
+pavucontrol
+pciutils
+perl
+pkgconf
+poppler-glib
+postgresql
+postgresql-docs
+postgresql-libs
+procps-ng
+psmisc
+pulseaudio
+pulseaudio-alsa
+pulseaudio-bluetooth
+pygmentize
+python-pip
+python2-attrs
+r
+rbenv
+redshift
+reiserfsprogs
+rofi
+rsync
+ruby-build
+s-nail
+screenfetch
+scrot
+sed
+shadow
+simple-mtpfs
+skypeforlinux-stable-bin
+snapd
+spacefm
+speedcrunch
+spotify
+stow
+sudo
+sxhkd
+sysfsutils
+systemd
+systemd-sysvcompat
+tar
+termite
+testdisk
+texinfo
+texlive-bibtexextra
+texlive-core
+texlive-latexextra
+the_silver_searcher
+tk
+tor-browser
+transmission-gtk
+ttf-bookerly
+ttf-dejavu
+ttf-fira-sans
+ttf-roboto
+ttf-unifont
+unzip
+usbutils
+util-linux
+valgrind
+vi
+weechat
+wget
+which
+wireless_tools
+wpa_actiond
+wpa_supplicant
+xdg-user-dirs
+xf86-video-intel
+xfsprogs
+xorg-bdftopcf
+xorg-iceauth
+xorg-luit
+xorg-mkfontscale
+xorg-server
+xorg-sessreg
+xorg-setxkbmap
+xorg-smproxy
+xorg-x11perf
+xorg-xauth
+xorg-xbacklight
+xorg-xcmsdb
+xorg-xcursorgen
+xorg-xdpyinfo
+xorg-xdriinfo
+xorg-xev
+xorg-xgamma
+xorg-xhost
+xorg-xinit
+xorg-xinput
+xorg-xkbcomp
+xorg-xkbevd
+xorg-xkbutils
+xorg-xkill
+xorg-xlsatoms
+xorg-xlsclients
+xorg-xmodmap
+xorg-xpr
+xorg-xprop
+xorg-xrandr
+xorg-xrdb
+xorg-xrefresh
+xorg-xset
+xorg-xsetroot
+xorg-xvinfo
+xorg-xwd
+xorg-xwininfo
+xorg-xwud
+xournalpp
+xterm
+yay
+youtube-dl-gui-git
+zeal
+zotero
+zsh
+zsh-autosuggestions
+zsh-syntax-highlighting
