--- a/uni/informatik/planner.org
+++ b/uni/informatik/planner.org
@@ -120,3 +120,14 @@ Der finale Plan der verfolgt wird
 
 
 # Info 1 Prakt Andere: 
+
+* 2020
+At 5 EVS + 5 SVS + 5 XML + 5 DB Grundlagen + 3 Medientools + 5 Medienretrieval + 5 Mediencodierung
+=
+33
+
+SoSe 20:
+- WV: DB & Webtechniken, Betriebsysteme -> 43 LP
+- Info 2, Datenstrukturen
+
+Missing: Forschungsseminar Informatik, Proseminar Informatik, Masterarbeit
